--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -8,10 +8,6 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ figure.id }}</td>
-            </tr>
-            <tr>
                 <th>Name</th>
                 <td>{{ figure.name }}</td>
             </tr>
@@ -25,15 +21,23 @@
             </tr>
             <tr>
                 <th>Pictures</th>
-                <td>{{ figure.pictures ? figure.pictures|join(', ') : '' }}</td>
+                {% if figure.pictures|length > 0 %}
+                    {% for picture in figure.pictures %}
+                        <td><img src="{{ asset('uploads/photos/' ~ picture) }}" alt="{{ figure.name }}" height="200" /></td>
+                    {% endfor %}
+                {% else %}
+                    <td>Il n'y a pas d'image pour cette figure.</td>
+                {% endif %}
             </tr>
             <tr>
                 <th>Videos</th>
-                <td>{{ figure.videos ? figure.videos|join(', ') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ figure.slug }}</td>
+                {% if figure.videos|length > 0 %}
+                    {% for videopath in figure.videos %}
+                        <td><object data="{{ videopath }}" height="300" width="560"></object></td>
+                    {% endfor %}
+                {% else %}
+                    <td>Il n'y a pas de vidéo pour cette figure.</td>
+                {% endif %}
             </tr>
         </tbody>
     </table>
