--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -1,4 +1,14 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <p>{{ form_row(form.name) }}</p>
+    <p>{{ form_row(form.description) }}</p>
+    <p>{{ form_row(form.family) }}</p>
+    <p>{{ form_row(form.pictures) }}</p>
+    <h3 class="title is-3">Galerie vidéos</h3>
+    <ul class="videos" data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}">
+        {# iterate over each existing tag and render its only field: name #}
+        {% for video in form.videos %}
+            <li>{{ form_row(video.videoId) }}</li>
+        {% endfor %}
+    </ul>
+    <button class="button is-success">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
