Picture upload OK : controllers, views, picture entity, forms.

--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -1,14 +1,13 @@
 {{ form_start(form) }}
-    <p>{{ form_row(form.name) }}</p>
-    <p>{{ form_row(form.description) }}</p>
-    <p>{{ form_row(form.family) }}</p>
-    <p>{{ form_row(form.pictures) }}</p>
-    <h3 class="title is-3">Galerie vidéos</h3>
-    <ul class="videos" data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}">
-        {# iterate over each existing tag and render its only field: name #}
-        {% for video in form.videos %}
-            <li>{{ form_row(video.videoId) }}</li>
+    {{ form_row(form.name) }}
+    {{ form_row(form.description) }}
+    {{ form_row(form.category) }}
+
+    <h3>Pictures</h3>
+    <ul class="pictures" data-prototype="{{ form_widget(form.pictures.vars.prototype)|e('html_attr') }}">
+        {% for picture in form.pictures %}
+            <li>{{ form_row(picture.file) }}</li>
         {% endfor %}
     </ul>
-    <button class="button is-success">{{ button_label|default('Save') }}</button>
+    <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
