--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -11,3 +11,7 @@
 
     {{ include('figure/_delete_form.html.twig') }}
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('assets/javascripts/pictures.js') }}"></script>
+{% endblock %}
