--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -10,11 +10,8 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>Slug</th>
                 <th>Description</th>
-                <th>Family</th>
-                <th>Pictures</th>
-                <th>Videos</th>
+                <th>Slug</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -23,19 +20,16 @@
             <tr>
                 <td>{{ figure.id }}</td>
                 <td>{{ figure.name }}</td>
-                <td>{{ figure.slug }}</td>
                 <td>{{ figure.description }}</td>
-                <td>{{ figure.family }}</td>
-                <td>{{ figure.pictures ? figure.pictures|length : '0' }}</td>
-                <td>{{ figure.videos ? figure.videos|length : '0' }}</td>
+                <td>{{ figure.slug }}</td>
                 <td>
-                    <a href="{{ path('figure_show', {'slug': figure.slug}) }}">show</a>
+                    <a href="{{ path('figure_show', {'id': figure.id}) }}">show</a>
                     <a href="{{ path('figure_edit', {'id': figure.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="5">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
