--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -1,13 +1,19 @@
 {{ form_start(form) }}
-    {{ form_row(form.name) }}
+    <div class="field">
+        {{ form_label(form.name, null, {'attr': {'class': 'label'}}) }}
+        {{ form_errors(form.name) }}
+        <div class="control">
+        {{ form_widget(form.name) }}
+        </div>
+    </div>
     {{ form_row(form.description) }}
     {{ form_row(form.category) }}
 
-    <h3>Pictures</h3>
+    <h3 class="subtitle">Pictures</h3>
     <ul class="pictures" data-prototype="{{ form_widget(form.pictures.vars.prototype)|e('html_attr') }}">
         {% for picture in form.pictures %}
             <li>{{ form_row(picture.file) }}</li>
         {% endfor %}
     </ul>
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="button is-success">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
