--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -3,11 +3,12 @@
 {% block title %}New Figure{% endblock %}
 
 {% block body %}
-    <h1>Create new Figure</h1>
+    <h1 class="title">Create new Figure</h1>
 
     {{ include('figure/_form.html.twig') }}
 
-    <a href="{{ path('figure_index') }}">back to list</a>
+    <a href="{{ path('figure_index') }}" class="button">back to list</a>
+
 {% endblock %}
 
 {% block javascripts %}
