--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -3,38 +3,35 @@
 {% block title %}Figure{% endblock %}
 
 {% block body %}
-    <h1>Figure</h1>
+    <h1 class="title">Figure</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ figure.id }}</td>
-            </tr>
             <tr>
                 <th>Name</th>
                 <td>{{ figure.name }}</td>
             </tr>
             <tr>
+                <th>Category</th>
+                <td>{{ figure.category }}</td>
+            </tr>
+            <tr>
                 <th>Description</th>
                 <td>{{ figure.description }}</td>
             </tr>
+
             <tr>
-                <th>Slug</th>
-                <td>{{ figure.slug }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
+                <th>Pictures</th>
                 {% for picture in figure.pictures %}
-                    <td><img src="{{ asset(picture.webPath) }}" alt="{{ picture.alt }}"></td>
+                    <td><img src="{{ asset(picture.webPath) }}" alt="{{ picture.alt }}" width="250"></td>
                 {% endfor %}
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('figure_index') }}">back to list</a>
+    <a href="{{ path('figure_index') }}" class="button ">back to list</a>
 
-    <a href="{{ path('figure_edit', {'id': figure.id}) }}">edit</a>
+    <a href="{{ path('figure_edit', {'id': figure.id}) }}" class="button is-primary">edit</a>
 
     {{ include('figure/_delete_form.html.twig') }}
 {% endblock %}
