--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('figure_new') }}">Create new</a>
+    <a href="{{ path('figure_new') }}" class="button is-primary">Create new</a>
 {% endblock %}
