Changed slugger call in form instead of listener (best practice from symfony 5 demo blog)

--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -4,24 +4,24 @@
         {{ form_label(form.name, null, {'attr': {'class': 'label'}}) }}
         {{ form_errors(form.name) }}
         <div class="control">
-        {{ form_widget(form.name) }}
+            {{ form_widget(form.name) }}
         </div>
     </div>
     {{ form_row(form.description) }}
     {{ form_row(form.category) }}
 
-    <h3 class="subtitle">Photos</h3>
+    <h3 class="subtitle">{{ form_label(form.pictures) }}</h3>
     <ul class="pictures" data-prototype="{{ form_widget(form.pictures.vars.prototype)|e('html_attr') }}">
-        {% for picture in form.pictures %}
-            <li>{{ form_row(picture.file) }}</li>
-        {% endfor %}
+    {% for picture in form.pictures %}
+        <li>{{ form_row(picture.file) }}</li>
+    {% endfor %}
     </ul>
 
-    <h3 class="subtitle">Vidéos</h3>
+    <h3 class="subtitle">{{form_label(form.videos)}}</h3>
     <ul class="videos" data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}">
-        {% for video in form.videos %}
-            <li>{{ form_row(video.url) }}</li>
-        {% endfor %}
+    {% for video in form.videos %}
+        <li>{{ form_row(form.videos) }}</li>
+    {% endfor %}
     </ul>
-    <button class="button is-success">{{ button_label|default('Save') }}</button>
+    <button class="button is-success">Sauvegarder</button>
 {{ form_end(form) }}
