--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ figure.slug }}</td>
                 <td>
                     <a href="{{ path('figure_show', {'id': figure.id}) }}" class="button">show</a>
-                    <a href="{{ path('figure_edit', {'id': figure.id}) }}" class="button is-primary">edit</a>
+                    <a href="{{ path('figure_edit', {'id': figure.id}) }}" class="button is-warning">edit</a>
                 </td>
             </tr>
         {% else %}
