--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="{{ asset('assets/css/bulma.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/snowtricks.css') }}">
         {% block stylesheets %}{% endblock %}
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-        <script src="{{ asset('assets/javascripts/jquery-3.4.1.min.js') }}"></script>
+        <script src="{{ asset('assets/js/jquery-3.4.1.min.js') }}"></script>
     </head>
+
     <body>
-        {% block body %}{% endblock %}
+        <header class="navbar navbar-expand-lg navbar-light bg-light flex-column flex-md-row bd-navbar">
+            <a class="navbar-brand" href="{{ path('figure_index') }}">
+                <img src="{{ asset('assets/images/Snowtricks-logo.jpg') }}"  height="35" class="d-none d-lg-inline-block align-top" alt="logo">
+                <i class="fas fa-home d-lg-none"></i>
+            </a>
+
+            <ul class="navbar-nav ml-auto d-none d-lg-inline-flex">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('figure_index') }}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('figure_new') }}">Tricks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Sign up</a>
+                </li>
+            </ul>
+
+            <i class="navbar-brand fas fa-sign-in-alt d-lg-none"></i>
+        </header>
+
+        <main class="cover container-fluid">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% block main %}{% endblock %}
+        </main>
+        {#
+        <footer class="footer bg-light">
+            <div>Copyright © 2020</div>
+        </footer>
+           #}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
