--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -1,27 +1,36 @@
 {{ form_start(form) }}
-<h3 class="subtitle">Détails</h3>
-    <div class="field">
-        {{ form_label(form.name, null, {'attr': {'class': 'label'}}) }}
-        {{ form_errors(form.name) }}
-        <div class="control">
-            {{ form_widget(form.name) }}
-        </div>
-    </div>
-    {{ form_row(form.description) }}
-    {{ form_row(form.category) }}
+<h3>Détails</h3>
+{#
+<div class="field">
+    {{ form_label(form.name, null, {'attr': {'class': 'label'}}) }}
 
-<h3 class="subtitle">{{ form_label(form.pictures) }}</h3>
+    {{ form_help(form.name) }}
+    <div class="control">
+        {{ form_widget(form.name) }}
+    </div>
+    {{ form_errors(form.name) }}
+</div>
+{{ form_row(form.description) }}
+
+
+
+
+
+{{ form_row(form.category) }}
+<h3>Ajouter une nouvelle vidéo ?</h3>
+<ul class="videos" data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}">
+{{ form_row(form.videos) }}
+{% for video in form.videos %}
+    <li>{{ form_row(form.video) }}</li>
+{% endfor %}
+</ul>
+#}
+
+    {#
     <ul class="pictures" data-prototype="{{ form_widget(form.pictures.vars.prototype)|e('html_attr') }}">
     {% for picture in form.pictures %}
         <li>{{ form_row(picture.file) }}</li>
     {% endfor %}
     </ul>
-
-    <h3 class="subtitle">{{form_label(form.videos)}}</h3>
-    <ul class="videos" data-prototype="{{ form_widget(form.videos.vars.prototype)|e('html_attr') }}">
-    {% for video in form.videos %}
-        <li>{{ form_row(form.videos) }}</li>
-    {% endfor %}
-    </ul>
-    <button class="button is-success">Sauvegarder</button>
+    #}
 {{ form_end(form) }}
