--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -2,14 +2,14 @@
 
 {% block title %}New Figure{% endblock %}
 
-{% block body %}
-    <h1 class="title">Créer une nouvelle figure</h1>
+{% block main %}
+    <h1>Créer une nouvelle figure</h1>
 
     {{ include('figure/_form.html.twig') }}
 
-    <a href="{{ path('figure_index') }}" class="button">back to list</a>
+    <a href="{{ path('figure_index') }}" class="btn btn-outline-dark">back to list</a>
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('assets/javascripts/figure_form.js') }}"></script>
+    <script src="{{ asset('assets/js/figure_form.js') }}"></script>
 {% endblock %}
