--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -18,6 +18,14 @@
     {{ form_widget(form.category) }}
 {% endblock %}
 
+{% block figure_createdAt %}
+    {{ figure.createdAt|date("m/d/Y") }}
+{% endblock %}
+
+{% block figure_lastModified %}
+    {{ figure.lastModified|date("m/d/Y") }}
+{% endblock %}
+
 {% block figure_name %}
     {{ form_widget(form.name) }}
 {% endblock %}
