--- a/public/assets/css/snowtricks.css
+++ b/public/assets/css/snowtricks.css
@@ -63,8 +63,13 @@ section
 
 main
 {
-    min-height: 100%;
+    width: 100%;
+    min-height: auto;
     grid-area: mn;
+    background-image: url('/assets/images/Snowtricks-background.jpg');
+    background-size: contain;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 
 footer
@@ -74,13 +79,4 @@ footer
     align-items: center;
     justify-content: space-around;
     font-size: 0.90rem;
-}
-
-.cover {
-    min-width: 100%;
-    height: 1080px;
-    background-image: url('/assets/images/Snowtricks-cover.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
