--- a/templates/figure/display_template.html.twig
+++ b/templates/figure/display_template.html.twig
@@ -1,73 +1,92 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('assets/css/snowtricks-show.css') }}">
-{% endblock %}
-
 {% block main %}
-    <div class="container bg-white">
-        <div class="imgheader" style="background-image: url('{{ asset('assets/images/card-default.jpg') }}');">
+    <div class="row justify-content-center">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="{{ asset('assets/images/card-default.jpg') }}" alt="test" class="img-responsive">
+                </div>
+                <div class="carousel-caption">
+                    <h1>{{ figure.name }}</h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="imgheader col-12" style="background-image: url('{{ asset('assets/images/card-default.jpg') }}');">
             <div class="float-right border border-dark">
                 <div class="my-2 px-3">
                     {% block header_edition %}{% endblock %}
                 </div>
             </div>
-            {% block name %}
-                <div class="container h-100">
-                    <div class="row h-100 align-items-center">
-                        <div class="col-12 text-center">
-                            <h1 class="font-weight-bold" style="color:red;">{{ figure.name }}</h1>
+            <div class="container h-100">
+                <div class="row h-100 align-items-center">
+                    <div class="col-12 text-center">
+                        <h1 class="font-weight-bold" style="color:red;"></h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12">
+            <h3>Images et vidéos</h3>
+            <div class="row">
+            {% if figure.videos|length > 0 or figure.pictures|length > 0 %}
+                <div class="col-sm-4">
+                    {% for picture in figure.pictures %}
+                        <div{% if null %} class="border-primary"{% endif %}>
+                            <img src="{{ asset(picture.webPath) }}" alt="{{ picture.alt }}" width="350">
                         </div>
-                    </div>
+                        {% block picture_edition %}{% endblock %}
+                    {% endfor %}
+                    {% for video in figure.videos %}
+                        <div class="video-block">
+                            {% if video.platform == 'youtube' or video.platform == 'vimeo' %}
+                                <div><iframe width="350" height="210" src="{{ video.url }}" allowfullscreen></iframe></div>
+                            {% elseif video.platform == 'dailymotion' %}
+                                <div><iframe width="350" height="210" src="{{ video.url }}" allowfullscreen></iframe></div>
+                            {% endif %}
+                            {% block video_edition %}{% endblock %}
+                        </div>
+                    {% endfor %}
                 </div>
-            {% endblock %}
-        </div>
-
-        <div class="row">
-            <div class="col-sm-2">
-                {% for picture in figure.pictures %}
-                    <div><img src="{{ asset(picture.webPath) }}" alt="{{ picture.alt }}" width="350"></div>
-                    {% block picture_edition %}{% endblock %}
-                {% endfor %}
-                {% for video in figure.videos %}
-                    <div class="video-block">
-                        {% if video.platform == 'youtube' or video.platform == 'vimeo' %}
-                            <div><iframe width="350" height="210" src="{{ video.url }}" allowfullscreen></iframe></div>
-                        {% elseif video.platform == 'dailymotion' %}
-                            <div><iframe width="350" height="210" src="{{ video.url }}" allowfullscreen></iframe></div>
-                        {% endif %}
-                        {% block video_edition %}{% endblock %}
-                    </div>
-                {% endfor %}
+            {% else %}
+                <div class="col-12">
+                    <p>Il n'y a pas encore d'images ou de vidéos pour illustrer cette figure.</p>
+                </div>
+            {% endif %}
             </div>
         </div>
 
-        <div class="col-6 offset-2">
-            <div class="row justify-content-between">
-                <div class="col-3">
-                    {% block figure_name %}{% endblock %}
-                </div>
-                <div class="col-3">
-                    {% block figure_createdAt %}{% endblock %}
-                </div>
-                <div class="col-3">
-                    {% block figure_category %}{% endblock %}
-                </div>
-                <div class="col-3">
-                    {% block figure_lastModified %}{% endblock %}
-                </div>
-            </div>
-        </div>
+        <table class="table col-sm-8">
+            <thead class="thead-dark">
+                <tr>
+                    <th class="text-center">Nom</th>
+                    <th class="text-center">Catégorie</th>
+                    <th class="text-center">Mise en ligne :</th>
+                    <th class="text-center">Mise à jour :</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="text-center">{% block figure_name %}{% endblock %}</td>
+                    <td class="text-center">{% block figure_category %}{% endblock %}</td>
+                    <td class="text-center">{{ figure.createdAt|date("m/d/Y") }}</td>
+                    <td class="text-center">{{ figure.lastModified|date("m/d/Y") }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-        <div class="col-12 text-center">
+        <div class="col-10 border border-dark">
             {% block figure_description %}{% endblock %}
         </div>
 
-        <div class="d-flex">
-            <div class="mr-auto p-2">
-                <a href="{{ path('figure_index') }}" class="btn btn-dark">back to list</a>
-            </div>
-            {% block buttons %}{% endblock %}
+        {% if (true == false) %}
+        <div class="col-8 d-flex">
+            <h1>Commentaires</h1>
+            {% block figure_comments %}{% endblock %}
         </div>
+        {% endif %}
+
+        {% block buttons %}{% endblock %}
     </div>
 {% endblock %}
