WIP : Smooth scroll for frontend incoming

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{{ asset('assets/css/snowtricks.css') }}">
         {% block stylesheets %}{% endblock %}
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-        <script src="{{ asset('assets/js/jquery-3.4.1.min.js') }}"></script>
+
     </head>
 
     <body>
@@ -43,8 +43,7 @@
             </div>
         {% endfor %}
             <div class="col-12 m-5 container-fluid">
-            {% block main %}
-            {% endblock %}
+            {% block main %}{% endblock %}
             </div>
         </main>
 
