--- a/public/assets/css/snowtricks.css
+++ b/public/assets/css/snowtricks.css
@@ -1,12 +1,8 @@
-/*
-html
-{
-    width: 100%;
-    height: 100%;
+html {
+    scroll-behavior: smooth;
 }
-*/
-body
-{
+
+body {
     display: grid;
     min-height: 100%;
     grid-template-columns: 100%;
@@ -17,16 +13,49 @@ body
             "hd"
 }
 
-@media (min-width: 992px)
+.navbar-brand {
+    display: none;
+}
+
+#menu-computer {
+    display: none;
+}
+
+#menu-mobile {
+    display: flex;
+}
+
+#footer {
+    display: none;
+}
+
+@media (min-width: 1280px)
 {
-    body
-    {
+    body {
         grid-template-rows: 50px 1fr 50px;
-        grid-template-columns: 1fr 2fr 2fr 1fr;
         grid-template-areas:
-                "hd hd hd hd"
-                "mn mn mn mn"
-                "ft ft ft ft";
+                "hd"
+                "mn"
+                "ft";
+    }
+
+    .navbar-brand {
+        display: inline-block;
+    }
+
+    #menu-computer {
+        display: inline-flex;
+    }
+
+    #menu-mobile {
+        display: none;
+    }
+
+    #footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 0.90rem;
     }
 }
 
@@ -51,32 +80,17 @@ nav
     align-items: center;
 }
 
-aside
-{
-    grid-area: as;
-}
-
-section
-{
-    grid-area: sn;
-}
-
 main
 {
     width: 100%;
     min-height: auto;
     grid-area: mn;
     background-image: url('/assets/images/Snowtricks-background.jpg');
-    background-size: contain;
+    background-size: auto;
     background-position: top;
     background-repeat: no-repeat;
 }
 
-footer
-{
+footer {
     grid-area: ft;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 0.90rem;
 }
