--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,28 +12,51 @@
     </head>
 
     <body>
-        <header class="navbar navbar-expand-lg navbar-light bg-light flex-column flex-md-row bd-navbar">
+        <header class="navbar navbar-expand navbar-light bg-light flex-row">
             <a class="navbar-brand" href="{{ path('figure_index') }}">
-                <img src="{{ asset('assets/images/Snowtricks-logo.jpg') }}"  height="35" class="d-none d-lg-inline-block align-top" alt="logo">
-                <i class="fas fa-home d-lg-none"></i>
+                <img src="{{ asset('assets/images/Snowtricks-logo.jpg') }}"  height="35" class="align-top" alt="logo">
             </a>
 
-            <ul class="navbar-nav ml-auto d-none d-lg-inline-flex">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('figure_index') }}">Home <span class="sr-only">(current)</span></a>
+            <ul id="menu-mobile" class="navbar-nav flex-fill justify-content-around">
+                <li class="nav-item" style="font-size: 45px">
+                    <a class="nav-link {% if app.request.get('_route') == 'figure_index' %}active{% endif %}" href="{{ path('figure_index') }}"><i class="fas fa-home"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('figure_new') }}">Tricks</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Sign up</a>
-                </li>
+                {% if is_granted('ROLE_USER') %}
+                    <li class="nav-item" style="font-size: 45px">
+                        <a class="nav-link {% if app.request.get('_route') == 'figure_new' %}active{% endif %}" href="{{ path('figure_new') }}"><i class="fas fa-bookmark"></i></a>
+                    </li>
+                    <li class="nav-item" style="font-size: 45px">
+                        <a class="nav-link" href="{{ path('app_logout')}}"><i class="fas fa-sign-out-alt"></i></a>
+                    </li>
+                {% else %}
+                    <li class="invisible" style="font-size: 45px"></li>
+                    <li class="nav-item" style="font-size: 45px">
+                        <a class="nav-link {% if app.request.get('_route') == 'app_login' %}active{% endif %}" href="{{ path('app_login') }}"><i class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                {% endif %}
             </ul>
 
-            <i class="navbar-brand fas fa-sign-in-alt d-lg-none"></i>
+            <ul id="menu-computer" class="navbar-nav ml-auto" >
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('figure_index') }}">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('figure_new') }}">New</a>
+                </li>
+                {% if is_granted('ROLE_USER') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout')}}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Sign up</a>
+                    </li>
+                {% endif %}
+            </ul>
+
         </header>
 
         <main class="container-fluid row justify-content-center">
@@ -47,8 +70,9 @@
             </div>
         </main>
 
-        <footer class="footer bg-light">
-            <div>Copyright © 2020</div>
+        <footer class="footer bg-light row text-center" id="footer">
+            <div class="col-12">Ce site est un projet d'étude réalisé avec le framework Symfony 5 dans le cadre du parcours de formation d'OpenClassRooms : Développeur d'application PHP/Symfony.</div>
+            <div class="col-12">Copyright Julien Robic © 2020</div>
         </footer>
 
         {% block javascripts %}{% endblock %}
