--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,11 +13,11 @@
 
     <body>
         <header class="navbar navbar-expand navbar-light bg-light flex-row">
-            <a class="navbar-brand" href="{{ path('figure_index') }}">
+            <a class="navbar-brand app-computer" href="{{ path('figure_index') }}">
                 <img src="{{ asset('assets/images/Snowtricks-logo.jpg') }}"  height="35" class="align-top" alt="logo">
             </a>
 
-            <ul id="menu-mobile" class="navbar-nav flex-fill justify-content-around">
+            <ul class="navbar-nav flex-fill justify-content-around app-mobile">
                 <li class="nav-item" style="font-size: 45px">
                     <a class="nav-link {% if app.request.get('_route') == 'figure_index' %}active{% endif %}" href="{{ path('figure_index') }}"><i class="fas fa-home"></i></a>
                 </li>
@@ -36,7 +36,7 @@
                 {% endif %}
             </ul>
 
-            <ul id="menu-computer" class="navbar-nav ml-auto" >
+            <ul class="navbar-nav ml-auto app-computer" >
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ path('figure_index') }}">Home<span class="sr-only">(current)</span></a>
                 </li>
@@ -70,7 +70,7 @@
             </div>
         </main>
 
-        <footer class="footer bg-light row text-center" id="footer">
+        <footer class="footer bg-light row text-center">
             <div class="col-12">Ce site est un projet d'étude réalisé avec le framework Symfony 5 dans le cadre du parcours de formation d'OpenClassRooms : Développeur d'application PHP/Symfony.</div>
             <div class="col-12">Copyright Julien Robic © 2020</div>
         </footer>
