--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,6 @@
                     </li>
                 {% endif %}
             </ul>
-
         </header>
 
         <main class="container-fluid row justify-content-center">
@@ -70,8 +69,8 @@
             </div>
         </main>
 
-        <footer class="footer bg-light row text-center">
-            <div class="col-12">Ce site est un projet d'étude réalisé avec le framework Symfony 5 dans le cadre du parcours de formation d'OpenClassRooms : Développeur d'application PHP/Symfony.</div>
+        <footer class="bg-light row text-center app-computer">
+            <div class="col-12">Ce site est un projet d'étude réalisé avec le framework Symfony dans le cadre du parcours de formation d'OpenClassRooms : Développeur d'application PHP/Symfony.</div>
             <div class="col-12">Copyright Julien Robic © 2020</div>
         </footer>
 
