FRONT : Added arrow to scroll down to the tricks, on index

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,11 @@
             </ul>
         </header>
 
-        <main class="container-fluid row justify-content-center">
+        <nav>
+            {# TODO : déplacer le menu mobile ici. #}
+        </nav>
+
+        <main class="container-fluid row justify-content-center" id="main">
         {% for message in app.flashes('success') %}
             <div class="alert alert-success">
                 {{ message }}
